@@ -3,6 +3,14 @@ Pkgcore Release Notes
 
 See ChangeLog for full commit logs; this is summarized/major changes.
 
+pkgcore 0.2.11:
+
+* COLON_SEPARATED, not COLON_SEPERATED for env.d parsing.
+
+* fix ticket #74; "x=y@a" should parse out as 'y@a', was terminating
+  early.
+
+
 pkgcore 0.2.10:
 
 * FEATURES=ccache now corrects perms as needed for when userpriv toggles.
